# EmbeddedProgramming

./: .gitmodules  README.md
Week1_LED_Blink/src/: main.cpp
tech-assignment-2-Firecrafter703/: .gitignore  README.md
tech-assignment-2-Firecrafter703/challenge1_wifi_mapper/: README.md
tech-assignment-2-Firecrafter703/challenge2_led_control/: README.md  log.csv
tech-assignment-3-Firecrafter703/: .gitignore  README.md
tech-assignment-3-Firecrafter703/challenge1_mqtt_thermal/: README.md
tech-assignment-3-Firecrafter703/challenge2_mqtt_request/: README.md
tech-assignment-4-Firecrafter703/: .gitignore  README.md
tech-assignment-4-Firecrafter703/challenge1_fastapi_netmap/: CHALLENGE_1_README.md
tech-assignment-4-Firecrafter703/challenge1_fastapi_netmap/python/: pyproject.toml  visualize.py  wifiscrape_webserver.py
tech-assignment-4-Firecrafter703/challenge2_temp_data_collection/: CHALLENGE_2_README.md
tech-assignment-4-Firecrafter703/challenge2_temp_data_collection/python/: pyproject.toml  temperature_webserver.py  visualize_temp.py
tech-assignment-5-Firecrafter703/: .gitignore  README.md  env.example
tech-assignment-5-Firecrafter703/challenge1_collection_client/: README.md
tech-assignment-7-Firecrafter703/: README.md
tech-assignment-7-Firecrafter703/server/webserver/: clean.py  export.py  features.py  init.sql  main.py  pyproject.toml  train.py
tech-assignment-7-Firecrafter703/server/webserver/static/: script.js  style.css
tech-assignment-7-Firecrafter703/server/webserver/templates/: index.html  login.html  register.html
(+81 files in other folders)
