[project]
name = "ta7"
version = "0.1.0"
description = "Create your own implementation!"
requires-python = ">=3.14"
dependencies = [
    "paho-mqtt",
    "requests",
    "python-dotenv",
    "matplotlib",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "numpy",
    "mysql-connector-python",
    "python-multipart",
    "bcrypt",
]
